--- a/Lesson6/23-31_docker/Dockerfile
+++ b/Lesson6/23-31_docker/Dockerfile
@@ -5,4 +5,8 @@ FROM ubuntu:20.04
 RUN apt update
 RUN apt install -y curl
 
-COPY ../hello.txt /app/
+# ディレクトリの内容をコピー
+COPY . /app/
+
+# 初期実行されるコマンド
+CMD ["ls", "-la"]
